--- a/service.yaml
+++ b/service.yaml
@@ -6,6 +6,7 @@ spec:
  ports:
    - protocol: TCP
      port: 80
-     targetPort: 3000
+    #  targetPort: 3000
+     targetPort: 8080
  selector:
    app: hello-node
