--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,6 +17,7 @@ spec:
      containers:
      - name: node
       #  image: <your docker image>:latest
-       image: cheongj/springboot-dmp:latest
+      #  image: cheongj/springboot-dmp:latest
+       image: 255945442255.dkr.ecr.us-east-1.amazonaws.com/albert-ecr-repository
        ports:
        - containerPort: 8080
